@@ -27,6 +27,8 @@ from PyQt5.QtCore import pyqtSignal, QObject, QTimer
 from PyQt5.QtNetwork import (QNetworkAccessManager, QNetworkRequest,
                              QNetworkReply)
 
+from qutebrowser.utils import log
+
 
 class HTTPRequest(QNetworkRequest):
     """A QNetworkRquest that follows (secure) redirects by default."""
@@ -59,7 +61,10 @@ class HTTPClient(QObject):
 
     def __init__(self, parent=None):
         super().__init__(parent)
-        self._nam = QNetworkAccessManager(self)
+        with log.disable_qt_msghandler():
+            # WORKAROUND for a hang when messages are printed, see our
+            # NetworkAccessManager subclass for details.
+            self._nam = QNetworkAccessManager(self)
         self._timers: MutableMapping[QNetworkReply, QTimer] = {}
 
     def post(self, url, data=None):
